Fix contrast accessibility issue

--- a/www/styles.css
+++ b/www/styles.css
@@ -351,7 +351,7 @@ footer p {
 
 footer .copyright {
     margin-top: 1rem;
-    opacity: 0.4;
+    opacity: 0.7;
 }
 
 .header-link {
